--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -1,22 +1,22 @@
 {
-  "name": "lab1",
+  "name": "movies-api",
   "version": "1.0.0",
-  "description": "node lab 1",
+  "description": "",
   "main": "index.js",
   "scripts": {
     "start": "nodemon --exec babel-node index.js"
   },
-  "author": "MrSpeedy68",
+  "author": "Adrian/20085132",
   "license": "ISC",
   "devDependencies": {
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
     "eslint": "^7.16.0",
-    "eslint-plugin-react": "^7.22.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
-    "dotenv": "^8.2.0"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1"
   }
 }
