--- a/movies-api/package.json
+++ b/movies-api/package.json
@@ -12,7 +12,8 @@
     "babel-cli": "^6.26.0",
     "babel-eslint": "^10.1.0",
     "babel-preset-env": "^1.7.0",
-    "eslint": "^7.16.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
     "nodemon": "^2.0.6"
   },
   "dependencies": {
